Correcting font for the autocomplete hint to stop overlapping text (#596)

--- a/assets/scss/components/_accessible_autocomplete.scss
+++ b/assets/scss/components/_accessible_autocomplete.scss
@@ -6,3 +6,6 @@
   font-family: GDS Transport, arial, sans-serif
 }
 
+.autocomplete__hint {
+  font-family: GDS Transport, arial, sans-serif
+}
